Fri Jul 13 15:48:59 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * DevGuideExamples/DCPS/Messenger/DataReaderListener.cpp:
          minor layout changes.

        * DevGuideExamples/DCPS/Messenger/publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/subscriber.cpp:
          Use default Topic and DataWriter QOS indentifiers instead of
          explicitly creating default QOS objects. This simplifies code.

        * dds/DCPS/Service_Participant.cpp:
          minor wide-char related modifications.

Tue Jul 10 17:07:05 UTC 2007  Trevor Fields  <fields_t@ociweb.com>

        * examples/DCPS/DistributedContent/ApplicationLevel.cpp:
        * examples/DCPS/DistributedContent/ApplicationLevel.h:
        * examples/DCPS/DistributedContent/main.cpp:

          Added ability to make the example user interactive.
          Define the DDS_DISTRIBUTEDCONTENT_REQUIRES_USER macro to
          build the user interaction code.

Mon Jul  9 21:28:42 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * examples/DCPS/IntroductionToOpenDDS/StockQuoter.mwc:

          Fixed typo in comment.

Mon Jul  9 20:52:47 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * etc/set-eol.cmd:

          Added a script to fix files that show up with Unix line endings on
          Windows systems.

Mon Jul  9 19:37:59 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * examples/DCPS/IntroductionToOpenDDS:

        * examples/DCPS/IntroductionToOpenDDS/AAA_README.txt:
        * examples/DCPS/IntroductionToOpenDDS/ExchangeEventDataReaderListenerImpl.h:
        * examples/DCPS/IntroductionToOpenDDS/ExchangeEventDataReaderListenerImpl.cpp:
        * examples/DCPS/IntroductionToOpenDDS/QuoteDataReaderListenerImpl.h:
        * examples/DCPS/IntroductionToOpenDDS/QuoteDataReaderListenerImpl.cpp:
        * examples/DCPS/IntroductionToOpenDDS/StockQuoter.idl:
        * examples/DCPS/IntroductionToOpenDDS/StockQuoter.mpc:
        * examples/DCPS/IntroductionToOpenDDS/StockQuoter.mwc: